# obsidian-fast-sync

./: .gitignore  Dockerfile  README.md  api.ts  constants.ts  docker-compose.yml  encryption.ts  main.js  main.ts  manifest.json  package.json  settings.ts  styles.css  tsconfig.json  types.ts  versions.json
.github/workflows/: release.yml
fast_sync_backend/: Dockerfile  __init__.py  caching.py  config.py  database.py  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml
fast_sync_backend/routers/: sync.py
fast_sync_plugin/: api.ts  encryption.ts  esbuild.config.mjs  eslint.config.mjs  main.js  main.ts  manifest.json  package.json  styles.css  types.ts  versions.json
fast_sync_plugin/ui/: FileHistoryModal.ts  FileVersionsModal.ts  LogViewerModal.ts
fast_sync_plugin/utils/: hashUtils.ts  logging.ts
tests/fast_sync_backend/: test_caching.py  test_config.py  test_database.py  test_dependencies.py  test_main.py  test_models.py
tests/fast_sync_backend/routers/: test_sync.py
ui/: FileHistoryModal.ts  FileVersionsModal.ts  LogViewerModal.ts
utils/: encodingUtils.ts  fileUtils.ts  logging.ts
